04/03/2007
greebo
- Added Select Complete Tall feature.

03/03/2007
OrbWeaver
- Fixed entity class inheritance, entities now list custom properties in the
  Entity Inspector's "Add property" dialog.

03/03/2007
greebo
- Added support for manipulation of func_static-style entities
- Added "Revert To Worldspawn" method to the orthocontext menu.
- Added feature allowing Map Position saving (10 slots)

28/02/2007
greebo
- Holding down SHIFT during manipulations constrains the operation to the axes
- Added GroupCycle commands that allow cycling through child primitives of entities 
  like func_static.

26/02/2007
greebo
- Rewrote Patch Inspector
- Disabled Scale Manipulator

23/02/2007
greebo
- Added "Normalise Texture" command that translates textures towards the origin 
  without changing their appearance.
- Rewrote Texture Tool (supports various manipulations of patches and brush faces).

19/02/2007
OrbWeaver
- Entity Inspector allows sorting by key or value.

18/02/2007
OrbWeaver
- Light Inspector uses white as a default colour (rather than black) for lights
  with no explicit colour key.
greebo
- Rewrote Surface Inspector (handles both brushes and patches now).

16/02/2007
OrbWeaver
- Filter system now affects static models in the camera view.
- Static models in camera view display with their correct skins.
greebo
- Added "Stitch Patch Textures" feature to snap texture coords of adjacent patches.

15/02/2007
OrbWeaver
- Save and load dialogs now activate on Enter key.
- ".map" extension appended to saved map files if not specified in dialog.
- Fixed crash when Colours dialog is closed with X button.

13/02/2007
greebo
- Added "Patch Thicken" feature.

12/02/2007
greebo
- Added Entity Selection Mode Toggle to limit mouse operations to entities.
- Added Flip X / Flip Y texture commands.
- Fixed Scale Manipulator for brushes.
- Entity List Selection now focuses the camera and orthoviews on the selected 
  entity.

11/02/2007
greebo