@@ -1,3 +1,7 @@
+06/03/2007
+greebo
+- Added "Export CollisionModel" feature to create .cm files from brushes.
+
 04/03/2007
 greebo
 - Added Select Complete Tall feature.
